--- a/static/assets/login/style.css
+++ b/static/assets/login/style.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  background-color: #eff3f4;
+  background-image: url("background.png");
   position: relative;
   width: 100%;
   height: 100%;
