--- a/template/contact.html
+++ b/template/contact.html
@@ -204,7 +204,7 @@
             </a>
             <div class="collapse" id="ui-basic">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="{{ url_for('donate') }}">Donate</a></li>
+                <li class="nav-item"> <a class="nav-link" href="https://www.ketto.org/">Donate</a></li>
                 <li class="nav-item"> <a class="nav-link" href="{{ url_for('story') }}">Your Story</a></li>
                 <li class="nav-item"> <a class="nav-link" href="{{ url_for('tasks') }}">Tasks</a></li>
               </ul>
