--- a/template/index.html
+++ b/template/index.html
@@ -39,7 +39,7 @@
       <div class="navbar-menu-wrapper d-flex align-items-top"> 
         <ul class="navbar-nav">
           <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
-            <h1 class="welcome-text">Good Morning, <span class="text-black fw-bold">{{ username }}</span></h1>
+            <h1 class="welcome-text">Good Afternoon, <span class="text-black fw-bold">{{ username }}</span></h1>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto">
@@ -52,7 +52,7 @@
               </div>
               <a class="dropdown-item" href="{{ url_for('tasks') }}"><i class="dropdown-item-icon mdi mdi-calendar-check-outline text-primary me-2"></i> Activity</a>
               <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-help-circle-outline text-primary me-2"></i> FAQ</a>
-              <a class="dropdown-item" href="{{ url_for('login') }}"><i class="dropdown-item-icon mdi mdi-power text-primary me-2"></i>Sign Out</a>
+              <a class="dropdown-item" href="{{ url_for('logout') }}"><i class="dropdown-item-icon mdi mdi-power text-primary me-2"></i>Sign Out</a>
             </div>
           </li>
         </ul>
@@ -251,7 +251,7 @@
             </a>
             <div class="collapse" id="ui-basic">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="{{ url_for('donate') }}">Donate</a></li>
+                <li class="nav-item"> <a class="nav-link" href="https://www.ketto.org/">Donate</a></li>
                 <li class="nav-item"> <a class="nav-link" href="{{ url_for('story') }}">your story</a></li>
                 <li class="nav-item"> <a class="nav-link" href="{{ url_for('tasks') }}">Tasks</a></li>
               </ul>
