--- a/template/login.html
+++ b/template/login.html
@@ -7,7 +7,30 @@
 <link rel="stylesheet" href="/static/assets/login/style.css">
 
 </head>
+<style>
+    a:visited {
+      color: rgb(41, 138, 138);
+      background-color: transparent;
+      text-decoration: none;
+    }
+    a:hover {
+      color: red;
+      background-color: transparent;
+      text-decoration: underline;
+    }
+    a:active {
+      color: yellow;
+      background-color: transparent;
+      text-decoration: underline;
+    }
+</style>
 <body>
+	<section id="sectionone" class="screen">
+		<div id="scene">
+		  <div data-depth="0.1" class="bg">
+			<img src="/static/assets/login/background.png" alt="" />
+		  </div>
+		</div>
 <!-- partial:index.partial.html -->
 <form method="POST">
 	<div class="svgContainer">
@@ -102,9 +125,14 @@
 	</div>
 	
 	<div class="inputGroup inputGroup1">
-		<label for="email1">UserName</label>
+		<label for="email1">Username</label>
 		<input type="text" name="username" id="email"  class="email" maxlength="256"/>
 		<p class="helper helper1">Enter your username</p>
+		<span class="indicator"></span>
+	</div>
+	<div class="inputGroup inputGroup2">
+		<label for="email1">Email</label>
+		<input type="text" name="email" id="email" class="email" maxlength="256"/>
 		<span class="indicator"></span>
 	</div>
 	<div class="inputGroup inputGroup2" >
@@ -117,7 +145,9 @@
 	
 	<div class="inputGroup inputGroup3">
 		<button  id="login">Log in</button> 
-	</div>	
+	</div>
+	<br>
+    <a href="{{ url_for('register') }}" >Don’t have an account? Sign up</a>	
 </form>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js'></script>
