--- a/template/tasks.html
+++ b/template/tasks.html
@@ -21,6 +21,13 @@
   
   <link rel="shortcut icon" href="/static/assets/index/images/favicon.png" />
 </head>
+<script>
+  jQuery(document).ready(function($) {
+    $(".clickable-row").click(function() {
+        window.location = $(this).data("href");
+    });
+});
+</script>
 <body>
   <div class="container-scroller"> 
    
@@ -204,7 +211,7 @@
             </a>
             <div class="collapse" id="ui-basic">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="{{ url_for('donate') }}">Donate</a></li>
+                <li class="nav-item"> <a class="nav-link" href="https://www.ketto.org/">Donate</a></li>
                 <li class="nav-item"> <a class="nav-link" href="{{ url_for('story') }}">Your Story</a></li>
                 <li class="nav-item"> <a class="nav-link" href="{{ url_for('tasks') }}">Tasks</a></li>
               </ul>
@@ -306,10 +313,10 @@
                           </tr>
                         </thead>
                         <tbody>
-                          <tr>
+                          <tr class='clickable-row' href="{{ url_for('upload') }}">
                             <td>singing</td>
                             <td class="text-danger">69/100</td>
-                            <td><label class="badge badge-warning">On Going</label></td>
+                            <td><a href="{{ url_for('upload') }}"><label class="badge badge-warning">On Going</label></a></td>
                           </tr>
                           <tr>
                             <td>drawing</td>
